--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+ <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
  <header class="header">
   <img class="header__img" src="./assets/img/eisenhower-matrix.jpg" alt="eisenhower matrix">
-  <a class='more_inf header__more-info' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <a class="more_inf header__more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
  </header>
  <main class="main-wrapper">
   <section class="add-section">
@@ -29,9 +29,9 @@
   <section class="todo-section">
     <!-- TODO  -->
    <h3 class="h3">Todo</h3>
-   <ul id='incompleteTasks'>
+   <ul id="incompleteTasks">
     <li>
-     <input type='checkbox'>
+     <input type="checkbox">
      <label class="task">Pay Bills</label>
      <input type="text" class="task">
      <button class="edit">Edit</button>
@@ -42,13 +42,14 @@
      <input type="checkbox">
      <label class="task">Go Shopping</label>
      <input type="text" value="Go Shopping" class="task">
-     <button class='edit'>Save</button>
+     <button class="edit">Save</button>
      <button class="delete">
      <img src="./remove.svg" alt="svg"></button>
     </li>
    </ul>
    </section>
   <section class="completed">
+    <!-- completed -->
    <h3 class="h3">Completed</h3>
    <ul id="completed-tasks">
     <li>
